# gitpaw

./: .gitignore  README.md  pyproject.toml
gitpaw/: __main__.py
