
[tool.poetry]
name = "gitpaw-ai"
version = "0.0.1"
description = "Generate git commit message based on changes"
authors = ["Bohdan Snisar <bogdan.sns@gmail.com>"]
license = "MIT"
homepage = "https://github.com/bsnisar/gitpaw"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "cohere", "shell", "git"]


[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
cohere = "^4.27"
rich-argparse = "^1.3.0"
rich = "^11.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yashi = "gitpaw.__main__:main"